Fix cookie notice width (following repositioning at bottom of screen) and fix link styling to meet colour contrast requirements.

--- a/src/scss/4_state/block/eu-cookie-compliance.scss
+++ b/src/scss/4_state/block/eu-cookie-compliance.scss
@@ -2,6 +2,7 @@
 
 .sliding-popup-bottom,
 .sliding-popup-top {
+  width: 100%;
   z-index: 99999;
   //text-align: center;
 }
@@ -16,6 +17,7 @@
 
 .eu-cookie-compliance {
   &-banner {
+    width: 100%;
     background: #041e34;
     padding-bottom: 1.6rem;
 
@@ -49,6 +51,11 @@
   }
 
   &-message {
+
+    a {
+      @include link-state-style($link-cookie-notice);
+    }
+
     p {
       @include adjust-font-size-to(16px, 4);
       color: white;
