--- a/src/scss/init/_variables.scss
+++ b/src/scss/init/_variables.scss
@@ -350,3 +350,28 @@ $link-site-wide-alert: (
   ),
   outline-offset: 0
 );
+
+$link-cookie-notice: (
+  color: (
+    default: $brand-primary,
+    focus: $link,
+    active: $link-active
+  ),
+  background-color: (
+    default: transparent,
+    focus: #fff,
+  ),
+  text-decoration: (
+    default: '1px underline',
+    focus: '2px underline #{$link}',
+    hover: '2px underline #{$brand-primary}',
+  ),
+  text-underline-offset: 3px,
+  outline: (
+    default: 0,
+    focus: '2px solid #fff',
+  ),
+  outline-offset: 0
+);
+
+
